kubernetes/overlays/staging/container-resources.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-manager-backend
spec:
  template:
    spec:
      containers:
        - name: service
          resources:
            requests:
              cpu: 200m
              memory: 150Mi
            limits:
              cpu: 500m
              memory: 300Mi
