kubernetes/overlays/staging/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: event-manager
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: "15"
spec:
  rules:
    - host: api-staging.meetable.apps.mikamai.com
      http:
        paths:
          - path: "/graphql"
            backend:
              serviceName: event-manager-backend
              servicePort: http
          - path: "/graphql/explorer"
            backend:
              serviceName: event-manager-backend
              servicePort: http
  tls:
    - hosts:
        - api-staging.meetable.apps.mikamai.com
      secretName: event-manager-api-crt
